@@ -9,6 +9,9 @@ Zope Changes
 
     Restructuring
 
+      - Made Helpsys.HelpSys internal ZCatalog creation lazy, so it isn't
+        created unless first accessed.
+
       - Turned deprecation warnings for manage_afterAdd, manage_beforeDelete
         and manage_afterClone methods into discouraged warnings. These methods
         will not be removed in Zope 2.11, but stay for the foreseeable future.
